nova_tests/plan118_5_v3/neg/t14_safe_breaks_ro_chain_ok.nv
// Plan 118.5 V3 T14 → RETIRED by Plan 138.5 (2026-06-11).
//
// `safe` (the §V3.4 redundancy-breaking stopper) is retired; `* safe ro Acc`
// errors at the `safe` token. Kept as a regression guard.
//
// EXPECT_COMPILE_ERROR E_SAFE_RETIRED

module neg.t14_safe_breaks_ro_chain_ok

type Acc {
    id i64
}

extern "nova" fn t14_p(x * safe ro Acc) -> ()
